<resources>
    <string name="app_name">Planets Position</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Action Bar/Toolbar -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_home">Home</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_date">Date</string>
    <string name="action_cal">Calendar</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_gps">GPS</string>
    <string name="action_map">Map</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_live">Real Time Position</string>
    <!-- Navigation Drawer -->
    <string name="nav_solar_eclipse">Solar Eclipses</string>
    <string name="nav_lunar_eclipse">Lunar Eclipses</string>
    <string name="nav_lunar_occultion">Lunar Occultations</string>
    <string name="nav_sky_position">Sky Position</string>
    <string name="nav_rise_set">Rise / Set</string>
    <string name="nav_location">Location</string>
    <!-- User Location -->
    <string name="loc_down">GPS</string>
    <string name="loc_found">Location Found</string>
    <string name="loc_lat">Latitude</string>
    <string name="loc_lng">Longitude</string>
    <string name="loc_ele">Elevation</string>
    <string name="loc_gmt">GMT offset</string>
    <string name="loc_timezone">Timezone</string>
    <string name="loc_user_city">Select a Country, State, and City.</string>
    <string name="loc_country">Country</string>
    <string name="loc_state">State / Province</string>
    <string name="loc_city">City</string>
    <string name="loc_tz_title">Select a timezone</string>
    <string name="loc_edit_fields">Edit Fields</string>
    <string name="loc_select_city">Select City</string>
    <!-- Planet data -->
    <string name="data_ra">Right Ascension</string>
    <string name="data_dec">Declination</string>
    <string name="data_az">Azimuth</string>
    <string name="data_alt">Altitude</string>
    <string name="data_dis">Distance</string>
    <string name="data_mag">Magnitude</string>
    <string name="data_set">Set Time</string>
    <string name="data_rise">Rise Time</string>
    <string name="data_rising">Rising</string>
    <string name="data_setting">Setting</string>
    <string name="data_all">View All</string>
    <string name="data_transit">Meridian Transit</string>
    <string name="below_hor">Object below horizon</string>
    <string name="planet_select">Select a planet</string>
    <!-- Solar/Lunar Eclipse -->
    <string name="ecl_sunrise">Sunrise</string>
    <string name="ecl_sunset">Sunset</string>
    <string name="ecl_moonrise">Moon Rise</string>
    <string name="ecl_moonset">Moon Set</string>
    <string name="ecl_times">Eclipse Times</string>
    <string name="ecl_data">Eclipse Data</string>
    <string name="ecl_local">(Local Time)</string>
    <string name="ecl_universal">(Universal Time)</string>
    <string name="ecl_se_start">Eclipse Start</string>
    <string name="ecl_se_tstart">Totality Start</string>
    <string name="ecl_se_max">Max Eclipse</string>
    <string name="ecl_se_tend">Totality End</string>
    <string name="ecl_se_end">Eclipse End</string>
    <string name="ecl_se_sun">Sun Position At Max Eclipse</string>
    <string name="ecl_local_type">Local Type:</string>
    <string name="ecl_se_cover">Sun Coverage</string>
    <string name="ecl_se_saros">Saros Number</string>
    <string name="ecl_se_sarosm">Saros Member</string>
    <string name="ecl_no">Eclipse not visible locally</string>
    <string name="ecl_le_pstart">Partial Start</string>
    <string name="ecl_le_pend">Partial End</string>
    <string name="ecl_le_moon">Moon Position At Max Eclipse</string>
    <string name="ecl_le_pmag">Penumbral\nMagnitude</string>
    <string name="ecl_le_umag">Umbral\nMagnitude</string>
    <string name="local_desc">Eclipse Local</string>
    <string name="type_desc">Eclipse Type</string>
    <string name="eclipse_dialog">Calculating eclipses,\nplease wait…</string>
    <!-- Lunar Occultation -->
    <string name="lo_times">Occultation Times</string>
    <string name="lo_data">Occultation Data</string>
    <string name="lo_start">Occultation Start</string>
    <string name="lo_end">Occultation End</string>
    <string name="lo_max">Occultation Max</string>
    <string name="lo_moon">Moon Position</string>
    <string name="lo_no">Occultation not visible locally</string>
    <!-- Moons views -->
    <string name="jupiter_moon0">Jupiter</string>
    <string name="jupiter_moon1">Io</string>
    <string name="jupiter_moon2">Europa</string>
    <string name="jupiter_moon3">Ganymede</string>
    <string name="jupiter_moon4">Callisto</string>
    <string name="saturn_moon0">Saturn</string>
    <string name="saturn_moon1">Mimas</string>
    <string name="saturn_moon2">Enceladus</string>
    <string name="saturn_moon3">Tethys</string>
    <string name="saturn_moon4">Dione</string>
    <string name="saturn_moon5">Rhea</string>
    <string name="saturn_moon6">Titan</string>
    <string name="saturn_moon7">Hyperion</string>
    <string name="saturn_moon8">Iapetus</string>
    <string name="radio_view1">Direct\nView</string>
    <string name="radio_view2">Inverted\nView</string>
    <string name="radio_view3">Mirror\nReversed</string>
    <!-- Screen reader strings -->
    <string name="screen_country">Country Selection</string>
    <string name="screen_state">State Selection</string>
    <string name="screen_city">City Selection</string>
    <string name="screen_time">Time Selection</string>
    <string name="screen_date">Date Selection</string>
    <string name="screen_planet">Planet Selection</string>
    <!-- Other strings -->
    <string name="alert_string">There is no location data saved.
        You can either download the data using GPS or manually enter the data.</string>
    <string name="permission_reason">This permission is to save your location for use
        in calculating local planetary events.</string>
    <string name="alert_manual">Manual</string>
    <string name="copy_dialog">Copying files.\nPlease wait…</string>
    <string name="wup_desc">Planet Symbol</string>
    <string name="title_activity_solar_eclipse_map">Solar Eclipse Map</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="location_canceled">The location request was canceled</string>
    <string name="location_denied">The location request was denied</string>
    <string name="location_required">The location permission needs to be enabled to fetch the location.</string>
    <string name="gps_string">Searching for GPS location…</string>
</resources>
