<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_main">
    <fragment
        android:id="@+id/nav_main"
        android:name="planets.position.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main"/>
    <fragment
        android:id="@+id/nav_about"
        android:name="planets.position.About"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_location"
        android:name="planets.position.location.LocationFragment"
        android:label="@string/nav_location"
        tools:layout="@layout/fragment_location" />
</navigation>
