<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".riseset.RiseSetFragment">

    <RadioGroup
        android:id="@+id/radioGroupRS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/riseRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data_rising"
            android:textColor="@color/text_color"
            app:buttonTint="@color/text_color" />

        <RadioButton
            android:id="@+id/setRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data_setting"
            android:textColor="@color/text_color"
            app:buttonTint="@color/text_color" />

        <RadioButton
            android:id="@+id/allRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data_all"
            android:textColor="@color/text_color"
            app:buttonTint="@color/text_color" />

    </RadioGroup>

    <TextView
        android:id="@+id/lastUpdateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/alt_text_color"
        android:textSize="@dimen/label_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupRS" />

    <View
        android:id="@+id/view01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdateText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planets_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view01"
        tools:listitem="@layout/planet_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
